--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -49,7 +49,7 @@ ul {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  background: url("../image/jeremy-bishop-QUwLZNchflk-unsplash.jpg") rgba(168, 168, 168, 0.486) ;
+  background: url("https://storage.googleapis.com/kaisar-submission-bucket/frontend-submission-pict/jeremy-bishop-QUwLZNchflk-unsplash.jpg") rgba(168, 168, 168, 0.486) ;
   width:100%;
   height:600px;
 
